rstsr-aocl-ffi/header/blis.h

		// Typedef official complex types to BLIS complex type names.
		typedef  float complex scomplex;
		typedef double complex dcomplex;
	typedef struct scomplex
	{
		float  real;
		float  imag;
	} scomplex;
	typedef struct dcomplex
	{
		double real;
		double imag;
	} dcomplex;
typedef int32_t   f77_int;
typedef int64_t   f77_int;
typedef long int  f77_int;
#define ctbmv                     CTBMV
#define ctbsv                     CTBSV
#define ctpmv                     CTPMV
#define ctpsv                     CTPSV
#define dspmv                     DSPMV
#define dsymv                     DSYMV
#define dsyr                      DSYR
#define dsyr2                     DSYR2
#define dtbmv                     DTBMV
#define dtbsv                     DTBSV
#define dtpmv                     DTPMV
#define dtpsv                     DTPSV
#define sspmv                     SSPMV
#define ssymv                     SSYMV
#define ssyr                      SSYR
#define ssyr2                     SSYR2
#define stbmv                     STBMV
#define stbsv                     STBSV
#define stpmv                     STPMV
#define stpsv                     STPSV
#define ztbmv                     ZTBMV
#define ztbsv                     ZTBSV
#define ztpmv                     ZTPMV
#define ztpsv                     ZTPSV
BLIS_EXPORT_BLIS void ssymv(const char   *uplo, const f77_int *n, const float  *alpha, const float  *a, const f77_int *lda, const float  *x, const f77_int *incx, const float  *beta, float  *y, const f77_int *incy);
BLIS_EXPORT_BLIS void sspmv(const char   *uplo, const f77_int *n, const float  *alpha, const float  *ap, const float  *x, const f77_int *incx, const float  *beta, float  *y, const f77_int *incy);
BLIS_EXPORT_BLIS void stbmv(const char   *uplo, const char   *trans, const char   *diag, const f77_int *n, const f77_int *k, const float  *a, const f77_int *lda, float  *x, const f77_int *incx);
BLIS_EXPORT_BLIS void stpmv(const char   *uplo, const char   *trans, const char   *diag, const f77_int *n, const float  *ap, float  *x, const f77_int *incx);
BLIS_EXPORT_BLIS void stbsv(const char   *uplo, const char   *trans, const char   *diag, const f77_int *n, const f77_int *k, const float  *a, const f77_int *lda, float  *x, const f77_int *incx);
BLIS_EXPORT_BLIS void stpsv(const char   *uplo, const char   *trans, const char   *diag, const f77_int *n, const float  *ap, float  *x, const f77_int *incx);
BLIS_EXPORT_BLIS void ssyr(const char   *uplo, const f77_int *n, const float  *alpha, const float  *x, const f77_int *incx, float  *a, const f77_int *lda);
BLIS_EXPORT_BLIS void ssyr2(const char   *uplo, const f77_int *n, const float  *alpha, const float  *x, const f77_int *incx, const float  *y, const f77_int *incy, float  *a, const f77_int *lda);
BLIS_EXPORT_BLIS void dsymv(const char   *uplo, const f77_int *n, const double *alpha, const double *a, const f77_int *lda, const double *x, const f77_int *incx, const double *beta, double *y, const f77_int *incy);
BLIS_EXPORT_BLIS void dspmv(const char   *uplo, const f77_int *n, const double *alpha, const double *ap, const double *x, const f77_int *incx, const double *beta, double *y, const f77_int *incy);
BLIS_EXPORT_BLIS void dtbmv(const char   *uplo, const char   *trans, const char   *diag, const f77_int *n, const f77_int *k, const double *a, const f77_int *lda, double *x, const f77_int *incx);
BLIS_EXPORT_BLIS void dtpmv(const char   *uplo, const char   *trans, const char   *diag, const f77_int *n, const double *ap, double *x, const f77_int *incx);
BLIS_EXPORT_BLIS void dtbsv(const char   *uplo, const char   *trans, const char   *diag, const f77_int *n, const f77_int *k, const double *a, const f77_int *lda, double *x, const f77_int *incx);
BLIS_EXPORT_BLIS void dtpsv(const char   *uplo, const char   *trans, const char   *diag, const f77_int *n, const double *ap, double *x, const f77_int *incx);
BLIS_EXPORT_BLIS void dsyr(const char   *uplo, const f77_int *n, const double *alpha, const double *x, const f77_int *incx, double *a, const f77_int *lda);
BLIS_EXPORT_BLIS void dsyr2(const char   *uplo, const f77_int *n, const double *alpha, const double *x, const f77_int *incx, const double *y, const f77_int *incy, double *a, const f77_int *lda);
BLIS_EXPORT_BLIS void ctbmv(const char   *uplo, const char   *trans, const char   *diag, const f77_int *n, const f77_int *k, const scomplex  *a, const f77_int *lda, scomplex  *x, const f77_int *incx);
BLIS_EXPORT_BLIS void ctpmv(const char   *uplo, const char   *trans, const char   *diag, const f77_int *n, const scomplex  *ap, scomplex  *x, const f77_int *incx);
BLIS_EXPORT_BLIS void ctbsv(const char   *uplo, const char   *trans, const char   *diag, const f77_int *n, const f77_int *k, const scomplex  *a, const f77_int *lda, scomplex  *x, const f77_int *incx);
BLIS_EXPORT_BLIS void ctpsv(const char   *uplo, const char   *trans, const char   *diag, const f77_int *n, const scomplex  *ap, scomplex  *x, const f77_int *incx);
BLIS_EXPORT_BLIS void ztbmv(const char   *uplo, const char   *trans, const char   *diag, const f77_int *n, const f77_int *k, const dcomplex *a, const f77_int *lda, dcomplex *x, const f77_int *incx);
BLIS_EXPORT_BLIS void ztpmv(const char   *uplo, const char   *trans, const char   *diag, const f77_int *n, const dcomplex *ap, dcomplex *x, const f77_int *incx);
BLIS_EXPORT_BLIS void ztbsv(const char   *uplo, const char   *trans, const char   *diag, const f77_int *n, const f77_int *k, const dcomplex *a, const f77_int *lda, dcomplex *x, const f77_int *incx);
BLIS_EXPORT_BLIS void ztpsv(const char   *uplo, const char   *trans, const char   *diag, const f77_int *n, const dcomplex *ap, dcomplex *x, const f77_int *incx);
		// Typedef official complex types to BLIS complex type names.
		typedef  float complex scomplex;
		typedef double complex dcomplex;
	typedef struct scomplex
	{
		float  real;
		float  imag;
	} scomplex;
	typedef struct dcomplex
	{
		double real;
		double imag;
	} dcomplex;
typedef int32_t   f77_int;
typedef int64_t   f77_int;
typedef long int  f77_int;