rstsr-openblas-ffi/src/f77blas.rs

    pub fn xtrmv(
        arg1: *mut c_char,
        arg2: *mut c_char,
        arg3: *mut c_char,
        arg4: *mut blas_int,
        arg5: *mut xdouble,
        arg6: *mut blas_int,
        arg7: *mut xdouble,
        arg8: *mut blas_int,
    );
    pub fn stpsv(
        arg1: *mut c_char,
        arg2: *mut c_char,
        arg3: *mut c_char,
        arg4: *mut blas_int,
        arg5: *mut f32,
        arg6: *mut f32,
        arg7: *mut blas_int,
    );
    pub fn dtpsv(
        arg1: *mut c_char,
        arg2: *mut c_char,
        arg3: *mut c_char,
        arg4: *mut blas_int,
        arg5: *mut f64,
        arg6: *mut f64,
        arg7: *mut blas_int,
    );
    pub fn qtpsv(
        arg1: *mut c_char,
        arg2: *mut c_char,
        arg3: *mut c_char,
        arg4: *mut blas_int,
        arg5: *mut xdouble,
        arg6: *mut xdouble,
        arg7: *mut blas_int,
    );
    pub fn ctpsv(
        arg1: *mut c_char,
        arg2: *mut c_char,
        arg3: *mut c_char,
        arg4: *mut blas_int,
        arg5: *mut f32,
        arg6: *mut f32,
        arg7: *mut blas_int,
    );
    pub fn ztpsv(
        arg1: *mut c_char,
        arg2: *mut c_char,
        arg3: *mut c_char,
        arg4: *mut blas_int,
        arg5: *mut f64,
        arg6: *mut f64,
        arg7: *mut blas_int,
    );
    pub fn xtpsv(
        arg1: *mut c_char,
        arg2: *mut c_char,
        arg3: *mut c_char,
        arg4: *mut blas_int,
        arg5: *mut xdouble,
        arg6: *mut xdouble,
        arg7: *mut blas_int,
    );
    pub fn stpmv(
        arg1: *mut c_char,
        arg2: *mut c_char,
        arg3: *mut c_char,
        arg4: *mut blas_int,
        arg5: *mut f32,
        arg6: *mut f32,
        arg7: *mut blas_int,
    );
    pub fn dtpmv(
        arg1: *mut c_char,
        arg2: *mut c_char,
        arg3: *mut c_char,
        arg4: *mut blas_int,
        arg5: *mut f64,
        arg6: *mut f64,
        arg7: *mut blas_int,
    );
    pub fn qtpmv(
        arg1: *mut c_char,
        arg2: *mut c_char,
        arg3: *mut c_char,
        arg4: *mut blas_int,
        arg5: *mut xdouble,
        arg6: *mut xdouble,
        arg7: *mut blas_int,
    );
    pub fn ctpmv(
        arg1: *mut c_char,
        arg2: *mut c_char,
        arg3: *mut c_char,
        arg4: *mut blas_int,
        arg5: *mut f32,
        arg6: *mut f32,
        arg7: *mut blas_int,
    );
    pub fn ztpmv(
        arg1: *mut c_char,
        arg2: *mut c_char,
        arg3: *mut c_char,
        arg4: *mut blas_int,
        arg5: *mut f64,
        arg6: *mut f64,
        arg7: *mut blas_int,
    );
    pub fn xtpmv(
        arg1: *mut c_char,
        arg2: *mut c_char,
        arg3: *mut c_char,
        arg4: *mut blas_int,
        arg5: *mut xdouble,
        arg6: *mut xdouble,
        arg7: *mut blas_int,
    );
    pub fn stbmv(
        arg1: *mut c_char,
        arg2: *mut c_char,
        arg3: *mut c_char,
        arg4: *mut blas_int,
        arg5: *mut blas_int,
        arg6: *mut f32,
        arg7: *mut blas_int,
        arg8: *mut f32,
        arg9: *mut blas_int,
    );
    pub fn dtbmv(
        arg1: *mut c_char,
        arg2: *mut c_char,
        arg3: *mut c_char,
        arg4: *mut blas_int,
        arg5: *mut blas_int,
        arg6: *mut f64,
        arg7: *mut blas_int,
        arg8: *mut f64,
        arg9: *mut blas_int,
    );
    pub fn qtbmv(
        arg1: *mut c_char,
        arg2: *mut c_char,
        arg3: *mut c_char,
        arg4: *mut blas_int,
        arg5: *mut blas_int,
        arg6: *mut xdouble,
        arg7: *mut blas_int,
        arg8: *mut xdouble,
        arg9: *mut blas_int,
    );
    pub fn ctbmv(
        arg1: *mut c_char,
        arg2: *mut c_char,
        arg3: *mut c_char,
        arg4: *mut blas_int,
        arg5: *mut blas_int,
        arg6: *mut f32,
        arg7: *mut blas_int,
        arg8: *mut f32,
        arg9: *mut blas_int,
    );
    pub fn ztbmv(
        arg1: *mut c_char,
        arg2: *mut c_char,
        arg3: *mut c_char,
        arg4: *mut blas_int,
        arg5: *mut blas_int,
        arg6: *mut f64,
        arg7: *mut blas_int,
        arg8: *mut f64,
        arg9: *mut blas_int,
    );
    pub fn xtbmv(
        arg1: *mut c_char,
        arg2: *mut c_char,
        arg3: *mut c_char,
        arg4: *mut blas_int,
        arg5: *mut blas_int,
        arg6: *mut xdouble,
        arg7: *mut blas_int,
        arg8: *mut xdouble,
        arg9: *mut blas_int,
    );
    pub fn stbsv(
        arg1: *mut c_char,
        arg2: *mut c_char,
        arg3: *mut c_char,
        arg4: *mut blas_int,
        arg5: *mut blas_int,
        arg6: *mut f32,
        arg7: *mut blas_int,
        arg8: *mut f32,
        arg9: *mut blas_int,
    );
    pub fn dtbsv(
        arg1: *mut c_char,
        arg2: *mut c_char,
        arg3: *mut c_char,
        arg4: *mut blas_int,
        arg5: *mut blas_int,
        arg6: *mut f64,
        arg7: *mut blas_int,
        arg8: *mut f64,
        arg9: *mut blas_int,
    );
    pub fn qtbsv(
        arg1: *mut c_char,
        arg2: *mut c_char,
        arg3: *mut c_char,
        arg4: *mut blas_int,
        arg5: *mut blas_int,
        arg6: *mut xdouble,
        arg7: *mut blas_int,
        arg8: *mut xdouble,
        arg9: *mut blas_int,
    );
    pub fn ctbsv(
        arg1: *mut c_char,
        arg2: *mut c_char,
        arg3: *mut c_char,
        arg4: *mut blas_int,
        arg5: *mut blas_int,
        arg6: *mut f32,
        arg7: *mut blas_int,
        arg8: *mut f32,
        arg9: *mut blas_int,
    );
    pub fn ztbsv(
        arg1: *mut c_char,
        arg2: *mut c_char,
        arg3: *mut c_char,
        arg4: *mut blas_int,
        arg5: *mut blas_int,
        arg6: *mut f64,
        arg7: *mut blas_int,
        arg8: *mut f64,
        arg9: *mut blas_int,
    );
    pub fn xtbsv(
        arg1: *mut c_char,
        arg2: *mut c_char,
        arg3: *mut c_char,
        arg4: *mut blas_int,
        arg5: *mut blas_int,
        arg6: *mut xdouble,
        arg7: *mut blas_int,
        arg8: *mut xdouble,
        arg9: *mut blas_int,
    );
    pub fn ssymv(
        arg1: *mut c_char,
        arg2: *mut blas_int,
        arg3: *mut f32,
        arg4: *mut f32,
        arg5: *mut blas_int,
        arg6: *mut f32,
        arg7: *mut blas_int,
        arg8: *mut f32,
        arg9: *mut f32,
        arg10: *mut blas_int,
    );
    pub fn dsymv(
        arg1: *mut c_char,
        arg2: *mut blas_int,
        arg3: *mut f64,
        arg4: *mut f64,
        arg5: *mut blas_int,
        arg6: *mut f64,
        arg7: *mut blas_int,
        arg8: *mut f64,
        arg9: *mut f64,
        arg10: *mut blas_int,
    );
    pub fn qsymv(
        arg1: *mut c_char,
        arg2: *mut blas_int,
        arg3: *mut xdouble,
        arg4: *mut xdouble,
        arg5: *mut blas_int,
        arg6: *mut xdouble,
        arg7: *mut blas_int,
        arg8: *mut xdouble,
        arg9: *mut xdouble,
        arg10: *mut blas_int,
    );
    pub fn csymv(
        arg1: *mut c_char,
        arg2: *mut blas_int,
        arg3: *mut f32,
        arg4: *mut f32,
        arg5: *mut blas_int,
        arg6: *mut f32,
        arg7: *mut blas_int,
        arg8: *mut f32,
        arg9: *mut f32,
        arg10: *mut blas_int,
    );
    pub fn zsymv(
        arg1: *mut c_char,
        arg2: *mut blas_int,
        arg3: *mut f64,
        arg4: *mut f64,
        arg5: *mut blas_int,
        arg6: *mut f64,
        arg7: *mut blas_int,
        arg8: *mut f64,
        arg9: *mut f64,
        arg10: *mut blas_int,
    );
    pub fn xsymv(
        arg1: *mut c_char,
        arg2: *mut blas_int,
        arg3: *mut xdouble,
        arg4: *mut xdouble,
        arg5: *mut blas_int,
        arg6: *mut xdouble,
        arg7: *mut blas_int,
        arg8: *mut xdouble,
        arg9: *mut xdouble,
        arg10: *mut blas_int,
    );
    pub fn sspmv(
        arg1: *mut c_char,
        arg2: *mut blas_int,
        arg3: *mut f32,
        arg4: *mut f32,
        arg5: *mut f32,
        arg6: *mut blas_int,
        arg7: *mut f32,
        arg8: *mut f32,
        arg9: *mut blas_int,
    );
    pub fn dspmv(
        arg1: *mut c_char,
        arg2: *mut blas_int,
        arg3: *mut f64,
        arg4: *mut f64,
        arg5: *mut f64,
        arg6: *mut blas_int,
        arg7: *mut f64,
        arg8: *mut f64,
        arg9: *mut blas_int,
    );
    pub fn qspmv(
        arg1: *mut c_char,
        arg2: *mut blas_int,
        arg3: *mut xdouble,
        arg4: *mut xdouble,
        arg5: *mut xdouble,
        arg6: *mut blas_int,
        arg7: *mut xdouble,
        arg8: *mut xdouble,
        arg9: *mut blas_int,
    );
    pub fn cspmv(
        arg1: *mut c_char,
        arg2: *mut blas_int,
        arg3: *mut f32,
        arg4: *mut f32,
        arg5: *mut f32,
        arg6: *mut blas_int,
        arg7: *mut f32,
        arg8: *mut f32,
        arg9: *mut blas_int,
    );
    pub fn zspmv(
        arg1: *mut c_char,
        arg2: *mut blas_int,
        arg3: *mut f64,
        arg4: *mut f64,
        arg5: *mut f64,
        arg6: *mut blas_int,
        arg7: *mut f64,
        arg8: *mut f64,
        arg9: *mut blas_int,
    );
    pub fn xspmv(
        arg1: *mut c_char,
        arg2: *mut blas_int,
        arg3: *mut xdouble,
        arg4: *mut xdouble,
        arg5: *mut xdouble,
        arg6: *mut blas_int,
        arg7: *mut xdouble,
        arg8: *mut xdouble,
        arg9: *mut blas_int,
    );
    pub fn ssyr(
        arg1: *mut c_char,
        arg2: *mut blas_int,
        arg3: *mut f32,
        arg4: *mut f32,
        arg5: *mut blas_int,
        arg6: *mut f32,
        arg7: *mut blas_int,
    );
    pub fn dsyr(
        arg1: *mut c_char,
        arg2: *mut blas_int,
        arg3: *mut f64,
        arg4: *mut f64,
        arg5: *mut blas_int,
        arg6: *mut f64,
        arg7: *mut blas_int,
    );
    pub fn qsyr(
        arg1: *mut c_char,
        arg2: *mut blas_int,
        arg3: *mut xdouble,
        arg4: *mut xdouble,
        arg5: *mut blas_int,
        arg6: *mut xdouble,
        arg7: *mut blas_int,
    );
    pub fn csyr(
        arg1: *mut c_char,
        arg2: *mut blas_int,
        arg3: *mut f32,
        arg4: *mut f32,
        arg5: *mut blas_int,
        arg6: *mut f32,
        arg7: *mut blas_int,
    );
    pub fn zsyr(
        arg1: *mut c_char,
        arg2: *mut blas_int,
        arg3: *mut f64,
        arg4: *mut f64,
        arg5: *mut blas_int,
        arg6: *mut f64,
        arg7: *mut blas_int,
    );
    pub fn xsyr(
        arg1: *mut c_char,
        arg2: *mut blas_int,
        arg3: *mut xdouble,
        arg4: *mut xdouble,
        arg5: *mut blas_int,
        arg6: *mut xdouble,
        arg7: *mut blas_int,
    );
    pub fn ssyr2(
        arg1: *mut c_char,
        arg2: *mut blas_int,
        arg3: *mut f32,
        arg4: *mut f32,
        arg5: *mut blas_int,
        arg6: *mut f32,
        arg7: *mut blas_int,
        arg8: *mut f32,
        arg9: *mut blas_int,
    );
    pub fn dsyr2(
        arg1: *mut c_char,
        arg2: *mut blas_int,
        arg3: *mut f64,
        arg4: *mut f64,
        arg5: *mut blas_int,
        arg6: *mut f64,
        arg7: *mut blas_int,
        arg8: *mut f64,
        arg9: *mut blas_int,
    );
    pub fn qsyr2(
        arg1: *mut c_char,
        arg2: *mut blas_int,
        arg3: *mut xdouble,
        arg4: *mut xdouble,
        arg5: *mut blas_int,
        arg6: *mut xdouble,
        arg7: *mut blas_int,
        arg8: *mut xdouble,
        arg9: *mut blas_int,
    );
    pub fn csyr2(
        arg1: *mut c_char,
        arg2: *mut blas_int,
        arg3: *mut f32,
        arg4: *mut f32,
        arg5: *mut blas_int,
        arg6: *mut f32,
        arg7: *mut blas_int,
        arg8: *mut f32,
        arg9: *mut blas_int,
    );
